--- a/css/rs-header.css
+++ b/css/rs-header.css
@@ -558,11 +558,19 @@
         -ms-transform: translateY(10px);
             transform: translateY(10px);
     opacity: 0;
-    visibility: hidden;
     border: 1px solid rgba(255, 255, 255, 0.3);
+  }
+  .rs-header__menu .menu__dropdown_list:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     -webkit-backdrop-filter: blur(16px);
             backdrop-filter: blur(16px);
     background-color: rgba(0, 27, 54, 0.8);
+    z-index: -1;
   }
   .rs-header__menu .menu__dropdown_list li > .menu__dropdown_list {
     top: 0px;
