--- a/scss/rs-header.scss
+++ b/scss/rs-header.scss
@@ -591,11 +591,20 @@
 						width: 335px;
 						transform: translateY(10px);
 						opacity: 0;
-						visibility: hidden;
 						// pointer-events: none;
 						border: 1px solid rgba(255, 255, 255, 0.3);
-						backdrop-filter: blur(16px);
-						background-color: rgba(0, 27, 54, 0.8);
+
+						&:after {
+							content: "";
+							position: absolute;
+							top: 0;
+							left: 0;
+							width: 100%;
+							height: 100%;
+							backdrop-filter: blur(16px);
+							background-color: rgba(0, 27, 54, 0.8);
+							z-index: -1;
+						}
 
 						li {
 							& > .menu__dropdown_list {
