--- a/scss/rs-header.scss
+++ b/scss/rs-header.scss
@@ -537,10 +537,10 @@
 						&:hover {
 							& > a {
 								text-shadow:
-									-0px -0px 0 #fff,
-									0px -0px 0 #fff,
-									-0px 0px 0 #fff,
-									0px 0px 0 #fff;
+									-0px -0px 1px #fff,
+									0px -0px 1px #fff,
+									-0px 0px 1px #fff,
+									0px 0px 1px #fff;
 							}
 						}
 					}
