--- a/scss/blocks/rs-features.scss
+++ b/scss/blocks/rs-features.scss
@@ -19,8 +19,8 @@
 	&__list {
 		display: flex;
 		flex-wrap: wrap;
-		background-color: #f5f6f6;
-		border: 1px solid #cccdcd;
+		position: relative;
+		background-color: #cccdcd;
 		clip-path: polygon(
 			42px 0%,
 			100% 0,
@@ -31,6 +31,21 @@
 			0 100%,
 			0% 42px
 		);
+
+		&::before {
+			content: "";
+			position: absolute;
+			top: 1px;
+			left: 1px;
+			bottom: 1px;
+			right: 1px;
+			display: block;
+			width: calc(100% - 2px);
+			height: calc(100% - 2px);
+			background-color: #f5f6f6;
+			clip-path: inherit;
+			z-index: -1;
+		}
 
 		@media (max-width: 1439.98px) {
 			clip-path: polygon(
