--- a/css/rs-form.css
+++ b/css/rs-form.css
@@ -7,10 +7,14 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   max-width: 1370px;
   margin: 0 auto;
+}
+@media (max-width: 991.98px) {
+  .rs-form__wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 .rs-form__wrapper > * {
   -webkit-box-flex: 1;
