--- a/css/rs-header.css
+++ b/css/rs-header.css
@@ -528,6 +528,7 @@
     -webkit-transform: translateY(0px);
         -ms-transform: translateY(0px);
             transform: translateY(0px);
+    pointer-events: all;
   }
 }
 @media (min-width: 991.98px) {
@@ -537,6 +538,7 @@
     -webkit-transform: translateY(0px);
         -ms-transform: translateY(0px);
             transform: translateY(0px);
+    pointer-events: all;
   }
 }
 .rs-header__menu .menu__dropdown._open-menu > a > i::before {
@@ -558,6 +560,7 @@
         -ms-transform: translateY(10px);
             transform: translateY(10px);
     opacity: 0;
+    pointer-events: none;
     border: 1px solid rgba(255, 255, 255, 0.3);
   }
   .rs-header__menu .menu__dropdown_list:after {
@@ -567,14 +570,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    -webkit-backdrop-filter: blur(16px);
-            backdrop-filter: blur(16px);
+    -webkit-backdrop-filter: blur(16px) opacity(100%);
+            backdrop-filter: blur(16px) opacity(100%);
     background-color: rgba(0, 27, 54, 0.8);
     z-index: -1;
   }
   .rs-header__menu .menu__dropdown_list li > .menu__dropdown_list {
-    top: 0px;
-    left: 100%;
+    top: -1px;
+    left: calc(100% - 1px);
   }
   .rs-header__menu .menu__dropdown_list li:first-child > a {
     padding-top: 30px;
