--- a/css/rs-style.css
+++ b/css/rs-style.css
@@ -453,11 +453,11 @@ p {
 .form__line {
   width: 100%;
   position: relative;
-  padding-bottom: 19px;
+  margin-bottom: 19px;
 }
 @media (max-width: 991.98px) {
   .form__line {
-    padding-bottom: 10px;
+    margin-bottom: 10px;
   }
 }
 @media (min-width: 991.98px) {
@@ -555,6 +555,97 @@ p {
 }
 .rs-input::placeholder {
   color: #898989;
+}
+.rs-input._form-error {
+  border-color: #cd3d3d;
+  color: #cd3d3d;
+}
+@media (max-width: 991.98px) {
+  .rs-input._form-error {
+    color: transparent;
+  }
+}
+.rs-input._form-error::-webkit-input-placeholder {
+  color: #cd3d3d;
+}
+.rs-input._form-error::-moz-placeholder {
+  color: #cd3d3d;
+}
+.rs-input._form-error:-ms-input-placeholder {
+  color: #cd3d3d;
+}
+.rs-input._form-error::-ms-input-placeholder {
+  color: #cd3d3d;
+}
+.rs-input._form-error::placeholder {
+  color: #cd3d3d;
+}
+@media (max-width: 991.98px) {
+  .rs-input._form-error::-webkit-input-placeholder {
+    color: transparent;
+  }
+  .rs-input._form-error::-moz-placeholder {
+    color: transparent;
+  }
+  .rs-input._form-error:-ms-input-placeholder {
+    color: transparent;
+  }
+  .rs-input._form-error::-ms-input-placeholder {
+    color: transparent;
+  }
+  .rs-input._form-error::placeholder {
+    color: transparent;
+  }
+}
+
+.form__error {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: 20px;
+  width: 215px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 140%;
+  letter-spacing: 0.03em;
+  color: #cd3d3d;
+  pointer-events: none;
+}
+@media (max-width: 1439.98px) {
+  .form__error {
+    right: 15px;
+    left: 15px;
+    width: calc(100% - 30px);
+  }
+}
+@media (max-width: 991.98px) {
+  .form__error {
+    right: 10px;
+    left: 10px;
+    width: calc(100% - 20px);
+    font-size: 11px;
+  }
+}
+.form__error::before {
+  content: "";
+  position: relative;
+  margin-right: 10px;
+  max-width: 20px;
+  max-height: 20px;
+  min-width: 20px;
+  min-height: 20px;
+  background-image: url("../img/icons/error.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
 .swiper {
