--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -257,10 +257,10 @@ p {
 	&__line {
 		width: 100%;
 		position: relative;
-		padding-bottom: 19px;
+		margin-bottom: 19px;
 
 		@media (max-width: 991.98px) {
-			padding-bottom: 10px;
+			margin-bottom: 10px;
 		}
 	}
 
@@ -339,6 +339,67 @@ p {
 
 	&::placeholder {
 		color: #898989;
+	}
+
+	&._form-error {
+		border-color: #cd3d3d;
+		color: #cd3d3d;
+
+		@media (max-width: 991.98px) {
+			color: transparent;
+		}
+
+		&::placeholder {
+			color: #cd3d3d;
+
+			@media (max-width: 991.98px) {
+				color: transparent;
+			}
+		}
+	}
+}
+
+.form__error {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	right: 20px;
+	width: 215px;
+	display: flex;
+	align-items: center;
+	font-weight: 300;
+	font-size: 13px;
+	// line-height: 18px;
+	line-height: 140%;
+	letter-spacing: 0.03em;
+	color: #cd3d3d;
+	pointer-events: none;
+
+	@media (max-width: 1439.98px) {
+		right: 15px;
+		left: 15px;
+		width: calc(100% - 30px);
+	}
+
+	@media (max-width: 991.98px) {
+		right: 10px;
+		left: 10px;
+		width: calc(100% - 20px);
+		font-size: 11px;
+	}
+
+	&::before {
+		content: "";
+		position: relative;
+		margin-right: 10px;
+		max-width: 20px;
+		max-height: 20px;
+		min-width: 20px;
+		min-height: 20px;
+		background-image: url("../img/icons/error.svg");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: contain;
 	}
 }
 
