--- a/scss/blocks/rs-form.scss
+++ b/scss/blocks/rs-form.scss
@@ -10,9 +10,12 @@
 	// .rs-form__wrapper
 	&__wrapper {
 		display: flex;
-		flex-wrap: wrap;
 		max-width: 1370px;
 		margin: 0 auto;
+
+		@media (max-width: 991.98px) {
+			flex-wrap: wrap;
+		}
 
 		& > * {
 			flex: 1 1 50%;
