--- a/scss/blocks/rs-nav-catalog.scss
+++ b/scss/blocks/rs-nav-catalog.scss
@@ -68,6 +68,33 @@
 						margin-left: 10px;
 					}
 				}
+
+				h4 {
+					position: relative;
+					&::after {
+						content: "";
+						position: absolute;
+						bottom: 0;
+						right: 0;
+						width: 0%;
+						height: 1px;
+						background-color: #fff;
+						transition: width 0.3s ease 0s;
+					}
+				}
+			}
+
+			@media (any-hover: hover) {
+				&:hover {
+					.rs-nav-catalog__item {
+						h4 {
+							&::after {
+								width: 100%;
+								left: 0;
+							}
+						}
+					}
+				}
 			}
 		}
 	}
