--- a/scss/rs-header.scss
+++ b/scss/rs-header.scss
@@ -556,6 +556,7 @@
 								opacity: 1;
 								visibility: visible;
 								transform: translateY(0px);
+								pointer-events: all;
 							}
 						}
 					}
@@ -565,6 +566,7 @@
 							opacity: 1;
 							visibility: visible;
 							transform: translateY(0px);
+							pointer-events: all;
 						}
 					}
 				}
@@ -591,7 +593,7 @@
 						width: 335px;
 						transform: translateY(10px);
 						opacity: 0;
-						// pointer-events: none;
+						pointer-events: none;
 						border: 1px solid rgba(255, 255, 255, 0.3);
 
 						&:after {
@@ -601,15 +603,15 @@
 							left: 0;
 							width: 100%;
 							height: 100%;
-							backdrop-filter: blur(16px);
+							backdrop-filter: blur(16px) opacity(100%);
 							background-color: rgba(0, 27, 54, 0.8);
 							z-index: -1;
 						}
 
 						li {
 							& > .menu__dropdown_list {
-								top: 0px;
-								left: 100%;
+								top: -1px;
+								left: calc(100% - 1px);
 							}
 
 							&:first-child {
